[package]
name = "iron_mind"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
log = "0.4"
env_logger = "0.10"
# Placeholder blockchain crates (to be filled later)
# substrate-api-client = "..."
